milestone 3 non terminata

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <div class="header">
 
         </div>
+        <div class="filter">
+            <label for="">Filtra per tipo</label>
+            <select class="type" id="type">
+                <option value="">All</option>
+                
+            </select>
+        </div>
         <div class="icons">
 
         </div>
